# ggml

./: .gitignore
src/: CMakeLists.txt  ggml-f16c.h  ggml.c
src/arch/e2k/: CMakeLists.txt  ggml-e2k.h  ggml-e2kintrin.h  tmpl_quantize_row_q8_i.c  tmpl_quantize_row_qN_0.c  tmpl_quantize_row_qN_1.c  tmpl_vec_dot_fPS.c  tmpl_vec_dot_q4_i_q8_i.c
tests/: CMakeLists.txt
